feat(lineage): update GetLineageResponse to include separate source and target relations
